@@ -75,11 +75,8 @@ PageLog @CUPS_LOGDIR@/page_log
 # Location of helper programs...
 #ServerBin @CUPS_SERVERBIN@
 
-# SSL/TLS certificate for the scheduler...
-#ServerCertificate @CUPS_SERVERCERT@
-
-# SSL/TLS private key for the scheduler...
-#ServerKey @CUPS_SERVERKEY@
+# SSL/TLS keychain for the scheduler...
+#ServerKeychain @CUPS_SERVERKEYCHAIN@
 
 # Location of other configuration files...
 #ServerRoot @CUPS_SERVERROOT@
